--- a/styles/index.css
+++ b/styles/index.css
@@ -10,14 +10,14 @@ body {
 }
 
 header {
-	background-color: #211533;
+	background-color: #1F596B;
 }
 
 section {
 	/* Espacio entre una sección y otra */
 	margin-bottom: 50px;
 	/* background color para ver los espacios */
-	background-color: aquamarine;
+	background-color: #292828;
 }
 
 /* Estilos de la navbar */
@@ -85,6 +85,58 @@ section {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+}
+
+a{
+	text-decoration: none;
+	color: #f2f2f2;
+}
+
+
+.register{
+	display: block;
+	width: 6rem;
+	height: 2rem;
+	background-color:#1B4B5A;
+	border-radius: 4rem;
+	align-content: center;
+	text-align: center;
+	
+}
+
+.register:hover{
+	background-color: #38a9cc;
+}
+
+h1{
+	color: #f2f2f2;
+}
+
+.banner-content-div{
+	display: flex;
+}
+
+.lang-content-div{
+	display: flex;
+	
+}
+
+.div-card{
+	margin-left: 10px;
+	background-color: #38a9cc;
+	width: 20rem;
+	height: 20rem;
+	display: flex;
+	flex-direction: column;
+	border-radius: 3rem;
+
+}
+
+.div-card  p{
+	margin-left: 10px;
+}
+.div-card  h2{
+	margin-left: 10px;
 }
 
 /* Estilos del footer */
