--- a/styles/register.css
+++ b/styles/register.css
@@ -1,3 +1,12 @@
+:root{
+	--Back-color: #3F4045;
+	--Primary-color: #A5D338; 
+	--Cards-lengujes: #E8EBE4;
+	--textos: #f2f2f2;
+	--Cards-info: #545454;
+	--Hover: #474B24;
+}
+
 body, html {
 	margin: 0;
 	padding: 0;
@@ -5,14 +14,15 @@ body, html {
 }
 
 body {
-	background-color: black;
-	color: white;
+	background-color: var(--Back-color);
+	color: var(--textos);
 	font-weight: 400;
 	line-height: 1.8;
 }
 
 header {
-	background-color: #1F596B;
+	background-color: var(--Back-color);
+	border-bottom: 4px solid var(--Primary-color);
 }
 
 section {
@@ -27,9 +37,9 @@ div {
 
 .register{
 	display: block;
-	width: 6rem;
-	height: 2rem;
-	background-color:#1B4B5A;
+	width: 10rem;
+	height: 3rem;
+	background-color: var(--Primary-color);
 	border-radius: 4rem;
 	align-content: center;
 	text-align: center;
@@ -46,7 +56,8 @@ div {
 .navbar a {
 	margin-left: 20px;
 	text-decoration: none;
-	color: white;
+	color: var(--textos);
+	font-size: 1.5rem;
 }
 
 .navbar ul {
@@ -81,7 +92,7 @@ div {
 	width: 900px;
 	margin: 0 auto;
 
-	box-shadow: 0 15px 16.83px 0.17px rgba(241, 239, 239, 0.05);
+	box-shadow: 0 15px 16.83px 0.17px rgba(255, 255, 255, 0.2);
 	border-radius: 20px;
 }
 
@@ -133,7 +144,7 @@ h2{
 	margin: 0;
 	padding: 0;
 	font-weight: 700;
-	color: white;
+	color: var(--textos);
 	font-size: 36px;
 
 	display: block;
@@ -168,7 +179,7 @@ input{
 	width: 100%;
 	display: block;
 	border: none;
-	border-bottom: 1px solid #fff;
+	border-bottom: 1px solid var(--textos);
 	padding: 6px 30px;
 	box-sizing: border-box;
 
@@ -190,7 +201,7 @@ label {
 	cursor: pointer;
 	position: absolute;
 	left: 0;
-	color: #fff;
+	color: var(--textos);
 	transform: translateY(50%);
 }
 
@@ -211,8 +222,8 @@ label {
 
 .form-submit{
 	display: inline-block;
-	background: #6dabe4;
-	color: #fff;
+	background: var(--Primary-color);
+	color: var(--textos);
 	border-bottom: none;
 	width: auto;
 	padding: 15px 39px;
