--- a/styles/register.css
+++ b/styles/register.css
@@ -91,7 +91,7 @@ div {
 	align-items: center;
 	width: 900px;
 	margin: 0 auto;
-
+	background-color: rgba(0, 0, 0, 0.2);
 	box-shadow: 0 15px 16.83px 0.17px rgba(255, 255, 255, 0.2);
 	border-radius: 20px;
 }
