--- a/styles/index.css
+++ b/styles/index.css
@@ -34,7 +34,7 @@ section {
 	/* Espacio entre una sección y otra */
 	margin-bottom: 20rem;
 	/* background color para ver los espacios */
-	background-color: #a78a8a;
+	
 }
 
 /* Estilos de la navbar */
@@ -75,7 +75,7 @@ section {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 50vh;
+	height: 100vh;
 	width: 100vw;
 	overflow: hidden;
 	position: relative;
@@ -155,6 +155,7 @@ a{
 	border-radius: 4rem;
 	align-content: center;
 	text-align: center;
+	margin-right: 5rem;
 	
 	
 }
@@ -258,15 +259,14 @@ h3{
 	color: var(--textos);
 	display: block;
 	background-color: var(--Primary-color);
+	border-radius: 20px;
 	width: 8rem;
-	height: 3rem;
-	border-radius: 4rem;
-	align-items: center;
+	padding: 5px;
 	text-align: center;
-	justify-content: center;
-	margin-left: 1rem;
-	font-size: 1.5rem;
+	padding-bottom: 9px;
+	margin-left: 20px;
 }
+
 
 /* seccion sobre nosotros */
 #Sobre-nosotros{
